<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MatchIt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="monsterMatch">Monster Match</string>
    <string name="play">Start Game</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="about">About</string>
    <string name="title_activity_game">MatchIt</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_title">MATCHIT MATCHING GAME</string>
    <string name="about_authorName">By Adrian Paiva</string>
    <string name="about_assignment">Assignment 1</string>
    <string name="about_courseName">COMP 3074 - Mobile Application Development 1</string>
    <string name="submit_to_score">Submit to Scoreboard</string>
    <string name="home">Home</string>

</resources>
