<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="ca.gbc.mobile.adrianpaiva.matchit.AboutActivity">

    <!--
    *************************************************
    * Adrian Paiva
    * 100864588
    * ‎Friday, ‎October ‎3, ‎2014
    * lastEdit: October ‎11, ‎2014
    **************************************************-->

    <TextView
        android:text="@string/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:textColor="#f18"
        android:id="@+id/textView"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:typeface="monospace" />
    <TextView
        android:text="@string/about_authorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#f18"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:text="@string/about_courseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#f18"
        android:layout_marginTop="36dp"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="112dp" />
    <TextView
        android:text="@string/about_assignment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#f18"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

</RelativeLayout>
